base-infra/keycloak/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-auth-prod
  labels:
    name: platform-auth-prod
    environment: production
    platform: infrastructure  # Allow access from gateway-platform
